v5.0.0/_sources/generated/pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosBeamStats.rst.txt
pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosBeamStats
==================================================================

.. currentmodule:: pcdsdevices.areadetector.detectors

.. autoclass:: PCDSAreaDetectorTyphosBeamStats

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - manufacturer
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``Manufacturer_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - camera_model
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``Model_RBV``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - sensor_size_x
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``MaxSizeX_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - sensor_size_y
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``MaxSizeY_RBV``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - data_type
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``DataType``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - exposure
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``AcquireTime``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - gain
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``Gain``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - num_images
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``NumImages``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - image_mode
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``ImageMode``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - trigger_mode
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``TriggerMode``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - acquisition_period
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``AcquirePeriod``
          - 
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - acquire
          - :class:`~ophyd.signal.EpicsSignal`
          - ``Acquire``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - acquire_rbv
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``DetectorState_RBV``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - image_counter
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``NumImagesCounter_RBV``
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - cam_viewer
          - :class:`~ophyd.signal.AttributeSignal`
          - 
          - 
          - normal
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - event_code
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``CamEventCode``
          - Code to determine beam synchronization rate.
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - event_rate
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``CamRepRate_RBV``
          - Current rate of the incoming triggers. Determined by event_code and the accelerator state.
          - config
          - Inherited from :class:`~pcdsdevices.areadetector.detectors.PCDSAreaDetectorTyphosTrigger`
    
        * - stats_enable
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``Stats2:EnableCallbacks``
          - 
          - config
          - 
    
        * - centroid_x
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``Stats2:CentroidX_RBV``
          - 
          - normal
          - 
    
        * - centroid_y
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``Stats2:CentroidY_RBV``
          - 
          - normal
          - 
    
        * - sigma_x
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``Stats2:SigmaX_RBV``
          - 
          - normal
          - 
    
        * - sigma_y
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``Stats2:SigmaY_RBV``
          - 
          - normal
          - 
    
        * - centroid_threshold
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``Stats2:CentroidThreshold``
          - 
          - config
          - 
    
        * - centroid_enable
          - :class:`~ophyd.signal.EpicsSignal`
          - ``Stats2:ComputeCentroid``
          - 
          - config
          - 
    
        * - target_x
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``Cross4:MinX``
          - 
          - normal
          - 
    
        * - target_y
          - :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          - ``Cross4:MinY``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: open_viewer
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    